Flare v1.07 (WIP, link soon)

Engine features:

* Added descriptions for some of the player stats to help clarify their purpose.

Engine fixes:

* Fixed GetText bug where fuzzy state from header wasn't being unset properly.
* Fixed rendering bug in WidgetTabControl.
* Fixed crashes when using an empty WidgetListBox.
* Fixed GetText bug where strings weren't being sanitized.

New translations:

* Brazilian Portuguese (pt_BR) by Vicente Monteiro, Gabriel Iasi
* Vietnamese (vi) by Nguyễn Gia Phong

Translation updates:

* Czech (cs) update (hark34)
* German (de) update (Wuzzy2)
* Spanish (es) update (Diego J. Romero López)
* Scottish Gaelic (gd) update (GunChleoc)
* Russian (ru) update (Sam Vo)
* Chinese (zh) update (dumaosen)



Flare v1.06 (http://flarerpg.org/index.php/2018/05/23/flare-1-06/)

Engine features:

* Allow modders to define a target screen DPI for resolution scaling.
* Added video option to toggle using DPI scaling.
* Add virtual joystick buttons for touchscreen devices.
* Add ability to make groups of map enemies invincible based on campaign status.

Engine fixes:

* Fixed performance flaw when "always show statbar labels" was enabled.
* Fix bug where incorrect Power menu tooltip was fetched when not using a mouse.

Game changes:

* Fix Torture Chambers quest breaking if the player skips the switch at the end.
* Fix being able to attack imprisoned enemies in Torture Chambers by making them invincible while the barriers are up.
* Reset Torture Chambers quest if it was finished without opening the barriers.

Translation updates:

* Spanish (es) update (Diego J. Romero López)
* Scottish Gaelic (gd) update (GunChleoc)



Flare v1.05 (http://flarerpg.org/index.php/2018/04/30/flare-1-05/)

Engine features:

* Tileset definitions now support multiple images. (Justin Jacobs)
* Display a message when unable to use a consumable item from the inventory. (Justin Jacobs)
* Add a hint to consumable/book tooltips to expose their interactable nature. (Justin Jacobs)