@@ -142,6 +142,7 @@ public:
 	std::vector<int> power_cast_duration;
 	FPoint enemy_pos; // positon of the highlighted enemy
 	unsigned long time_played;
+	bool questlog_dismissed;
 };
 
 #endif
