@@ -3,6 +3,7 @@ Flare v1.07 (WIP, link soon)
 Engine features:
 
 * Added descriptions for some of the player stats to help clarify their purpose.
+* The game now remembers if the player dismissed the quest log notification.
 
 Engine fixes:
 
